<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="be.howest.nmct.bluetoothtesting.MainActivityFragment"
    android:padding="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_leds_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leds_on"/>
    <Button
        android:id="@+id/button_leds_flash_slow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leds_flash_slow"/>
    <Button
        android:id="@+id/button_leds_flash_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leds_flash_medium"/>
    <Button
        android:id="@+id/button_leds_flash_fast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leds_flash_fast"/>
    <Button
        android:id="@+id/button_leds_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leds_off"/>
    <TextView
        android:id="@+id/textview_connected_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connected_devices"/>
    <TextView
        android:id="@+id/textview_clicked_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clicked_buttons"/>
    <Button
        android:id="@+id/button_change_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_to_main2"/>

</LinearLayout>
